syntax = "proto3";
package messages;

enum MessageType {
  AUTH = 0;
  TEXT = 1;
  IMAGE = 2;
}

message MessageHeader {
  MessageType type = 1;
  int32 length = 2;
}

message AuthMessage {
  string name = 1;
}

message TextMessage {
  string text = 1;
}

message ImageMessage {
  repeated int32 image = 1;
}
